--- a/css/main.css
+++ b/css/main.css
@@ -340,3 +340,242 @@ template {
 [hidden] {
   display: none;
 }
+
+@font-face {
+  font-family: "Gagalin";
+  src: url("../../fonts/Gagalin-Regular.eot");
+  src: url("../../fonts/Gagalin-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/Gagalin-Regular.woff2") format("woff2"), url("../../fonts/Gagalin-Regular.woff") format("woff"), url("../../fonts/Gagalin-Regular.ttf") format("truetype"), url("../../fonts/Gagalin-Regular.svg#svgFontName") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Lifehack";
+  src: url("../../fonts/Lifehack-Medium.eot");
+  src: url("../../fonts/Lifehack-Medium.eot?#iefix") format("embedded-opentype"), url("../../fonts/Lifehack-Medium.woff2") format("woff2"), url("../../fonts/Lifehack-Medium.woff") format("woff"), url("../../fonts/Lifehack-Medium.ttf") format("truetype"), url("../../fonts/Lifehack-Medium.svg#svgFontName") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Ubuntu";
+  src: url("../../fonts/Ubuntu-Bold.eot");
+  src: url("../../fonts/Ubuntu-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/Ubuntu-Bold.woff2") format("woff2"), url("../../fonts/Ubuntu-Bold.woff") format("woff"), url("../../fonts/Ubuntu-Bold.ttf") format("truetype"), url("../../fonts/Ubuntu-Bold.svg#svgFontName") format("svg");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Ubuntu";
+  src: url("../../fonts/Ubuntu-Light.eot");
+  src: url("../../fonts/Ubuntu-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/Ubuntu-Light.woff2") format("woff2"), url("../../fonts/Ubuntu-Light.woff") format("woff"), url("../../fonts/Ubuntu-Light.ttf") format("truetype"), url("../../fonts/Ubuntu-Light.svg#svgFontName") format("svg");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Ubuntu";
+  src: url("../../fonts/Ubuntu-Medium.eot");
+  src: url("../../fonts/Ubuntu-Medium.eot?#iefix") format("embedded-opentype"), url("../../fonts/Ubuntu-Medium.woff2") format("woff2"), url("../../fonts/Ubuntu-Medium.woff") format("woff"), url("../../fonts/Ubuntu-Medium.ttf") format("truetype"), url("../../fonts/Ubuntu-Medium.svg#svgFontName") format("svg");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Ubuntu";
+  src: url("../../fonts/Ubuntu.eot");
+  src: url("../../fonts/Ubuntu.eot?#iefix") format("embedded-opentype"), url("../../fonts/Ubuntu.woff2") format("woff2"), url("../../fonts/Ubuntu.woff") format("woff"), url("../../fonts/Ubuntu.ttf") format("truetype"), url("../../fonts/Ubuntu.svg#svgFontName") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  font-size: 16px;
+  line-height: 1.42;
+  position: relative;
+  font-family: "Ubuntu", Arial, sans-serif;
+  font-weight: normal;
+  color: #2f3234;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.wrapper {
+  position: relative;
+  width: 100%;
+  min-width: 960px;
+  min-height: 100%;
+  overflow: hidden;
+}
+
+.container {
+  max-width: 940px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  font-weight: normal;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+ul li {
+  list-style: none;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+footer {
+  position: relative;
+  width: 100%;
+}
+
+button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.section {
+  height: 100vh;
+  min-height: 650px;
+}
+
+.hero {
+  background: #2f3234 url("../img/bg/herobgtmp.jpg") center center/cover no-repeat;
+}
+
+.hero__container {
+  height: 100%;
+}
+
+.hero__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-flex: 0.9;
+      -ms-flex: 0.9;
+          flex: 0.9;
+}
+
+.hero__desc {
+  padding-top: 80px;
+  margin-left: 50px;
+}
+
+.hero__title {
+  font-family: "Gagalin";
+  font-size: 72px;
+  color: #f9b43b;
+  margin-bottom: 55px;
+  line-height: 1;
+}
+
+.hero__subtitle {
+  font-size: 56px;
+  font-family: "Lifehack";
+  color: #fff;
+  line-height: 1;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 12px;
+}
+
+.header__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav {
+  margin-right: 15px;
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.nav__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 14px;
+}
+.nav__item::after {
+  content: "";
+  width: 4px;
+  height: 4px;
+  background: #fff;
+  border-radius: 50%;
+  margin-left: 14px;
+}
+.nav__item:last-child::after {
+  display: none;
+  margin-right: 0;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 13px;
+}
+
+.btn {
+  padding: 12px 15px;
+  border-radius: 5px;
+  background: #e35028;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 13px;
+}
