--- a/css/main.scss
+++ b/css/main.scss
@@ -1,2 +1,35 @@
-// normalize
+//fonts
+
+$gagalin: "Gagalin";
+$lifehack: "Lifehack";
+$ubuntu: "Ubuntu"; 
+//  переменные в @include ubuntu() regular(default), light, medium, bold
+
+// colors
+
+$orange: #e45028;
+$yellow: #f9b43b;
+$black: #2f3234;
+$red: #e35028;
+$hover-orange: #c1401e;
+$hover-black: #1f2122;
+
+
+//normalize 
+
 @import "_misc/normalize.scss";
+
+
+//setups
+
+@import "_misc/mixins";
+@import "_misc/fonts.scss";
+@import "_misc/layout.scss";
+
+//blocks
+
+@import "blocks/section.scss";
+@import "blocks/hero.scss";
+@import "blocks/header.scss";	
+@import "blocks/nav.scss";	
+@import "blocks/btn.scss";	
