--- a/css/main.css
+++ b/css/main.css
@@ -455,15 +455,50 @@ button {
   background: transparent;
   border: none;
   cursor: pointer;
+  color: inherit;
 }
 
 .section {
   height: 100vh;
   min-height: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.section--non-centered {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.title {
+  font-family: "Gagalin";
+  font-size: 72px;
+  line-height: 1;
+}
+.title--color--yellow {
+  color: #f9b43b;
+}
+.title--color--black {
+  color: #2f3234;
+}
+.title--color--white {
+  color: #fff;
+}
+.title--centered {
+  text-align: center;
 }
 
 .hero {
   background: #2f3234 url("../img/bg/herobgtmp.jpg") center center/cover no-repeat;
+  position: relative;
 }
 
 .hero__container {
@@ -490,11 +525,7 @@ button {
 }
 
 .hero__title {
-  font-family: "Gagalin";
-  font-size: 72px;
-  color: #f9b43b;
   margin-bottom: 55px;
-  line-height: 1;
 }
 
 .hero__subtitle {
@@ -578,4 +609,181 @@ button {
   text-transform: uppercase;
   color: #fff;
   font-size: 13px;
+}
+
+.arrow-scroll {
+  width: 29px;
+  height: 14px;
+  background: url("../img/icons/arrow-scroll.svg") center center/contain no-repeat;
+  display: block;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+
+.best {
+  background: url("./../img/bg/about.jpg") center center/cover no-repeat;
+}
+
+.best__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 56px;
+}
+
+.best__item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-right: 35px;
+  text-align: center;
+}
+.best__item:last-child {
+  margin-right: 0;
+}
+
+.best__picture {
+  margin-bottom: 34px;
+}
+
+.best__desc-title {
+  font-size: 24px;
+  font-family: "Lifehack";
+  margin-bottom: 23px;
+}
+
+.best__desc-text {
+  font-weight: light;
+  font-size: 14px;
+  opacity: 0.8;
+}
+
+.reviews__list {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.reviews__item {
+  height: 50%;
+  width: 25%;
+  position: relative;
+}
+.reviews__item:hover .reviews__hover {
+  opacity: 1;
+}
+
+.reviews__pic {
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.reviews__hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(47, 50, 52, 0.7);
+  color: #fff;
+  padding: 50px 19px 25px;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.order {
+  color: #fff;
+  background: url(../img/bg/delivery-form.jpg) center center/cover no-repeat;
+}
+
+.form__elem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.form__column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-right: 20px;
+}
+.form__column:last-child {
+  margin-right: 0;
+}
+
+.form__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.form__block {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-right: 20px;
+  display: block;
+}
+.form__block:last-child {
+  margin-right: 0;
+}
+
+.form__input {
+  background: #fff;
+  border-radius: 3px;
+  border: none;
+  padding: 8px 21px;
+  width: 100%;
+}
+.form__input--textarea {
+  resize: none;
+  height: 110px;
+}
+
+.fixed-menu {
+  position: fixed;
+  top: 95px;
+  right: 53px;
+  z-index: 100;
+}
+
+.fixed-menu__item--active .fixed-menu__dot {
+  border: 1px solid #fff;
+}
+
+.fixed-menu__dot {
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  margin-bottom: 3px;
+  position: relative;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+.fixed-menu__dot:last-child {
+  margin-bottom: 0;
+}
+.fixed-menu__dot::before {
+  content: "";
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
