--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,10 @@ $hover-orange: #c1401e;
 $hover-black: #1f2122;
 
 
+//z-index
+
+$z-fixed-menu: 100;
+
 //normalize 
 
 @import "_misc/normalize.scss";
@@ -29,7 +33,14 @@ $hover-black: #1f2122;
 //blocks
 
 @import "blocks/section.scss";
+@import "blocks/title.scss";
 @import "blocks/hero.scss";
 @import "blocks/header.scss";	
 @import "blocks/nav.scss";	
 @import "blocks/btn.scss";	
+@import "blocks/arrow-scroll.scss";	
+@import "blocks/best.scss";	
+@import "blocks/reviews.scss";	
+@import "blocks/order.scss";
+@import "blocks/form.scss";
+@import "blocks/fixed-menu.scss";
