added hovers, animation, etc

--- a/css/blocks/btn.scss
+++ b/css/blocks/btn.scss
@@ -1,8 +1,50 @@
 .btn {
-	padding: 12px 15px;
+	padding: 10px 16px;
 	border-radius: 5px;
 	background: $red;
 	text-transform: uppercase;
 	color: #fff;
 	font-size: 13px;
+	position: relative;
+	overflow: hidden;
+	transition: .7s;
+
+	&::before {
+		content: "";
+		width: 10px;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		background: #fff;
+		opacity: .8;
+		transform: translate(-4em) skewX(30deg);
+	}
+
+	&:hover{
+		background: $hover-orange;
+		
+		&::before {
+			animation: light .7s;
+		}
+	}
+
+	&--bg--black {
+		background: $black;
+		transition: .5s;
+
+		&:hover {
+			background: $hover-black;
+		}
+	}
 }
+
+@keyframes light {
+	from {
+			transform: translateX(-4em) skewX(-45deg);
+	}
+	to {
+			transform: translateX(10em) skewX(-45deg);
+	}
+}
+
