--- a/css/blocks/arrow-scroll.scss
+++ b/css/blocks/arrow-scroll.scss
@@ -4,7 +4,12 @@
 	background: url('../img/icons/arrow-scroll.svg') center center / contain no-repeat ;
 	display: block;
 	position: absolute;
-	bottom: 20px;
+	bottom: 40px;
 	left: 50%;
 	transform: translateX(-50%);
+	transition: .3s;
+
+	&:hover {
+		bottom: 36px;
+	}
 }
