--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -1,5 +1,7 @@
+
 .form__elem {
 	display: flex;
+	padding-top: 40px;
 }
 
 .form__column {
@@ -13,6 +15,7 @@
 
 .form__row{ 
 	display: flex;
+	margin-bottom: 20px;
 }
 
 .form__block {
@@ -25,15 +28,104 @@
 	}
 }
 
+.form__block-title {
+	font-weight: light;
+	font-size: 14px;
+	margin-left: 10px;
+}
+
 .form__input {
 	background: #fff;
 	border-radius: 3px;
 	border: none;
-	padding: 8px 21px;
+	padding: 10px 21px;
+	margin-top: 5px;
 	width: 100%;
+	outline-color: #f9b43b;
 
 	&--textarea {
 		resize: none;
-		height: 110px;
+		height: 124px;
+	}
+}
+
+.form__radio {
+	display: flex;
+	align-items: center;
+	margin-right: 20px;
+	cursor: pointer;
+
+	&:last-child {
+		margin-right: 0;
+	}
+}
+
+.form__radio--input{
+	display: none;
+
+	&:checked + .form__radio--check::before{
+		opacity: 1;
+	}
+}
+
+.form__radio--check {
+	display: block;
+	width: 16px;
+	height: 16px;
+	border-radius: 50%;
+	background: #fff;
+	position: relative;
+
+	&::before {
+		content: "";
+		position: absolute;
+		display: block;
+		width: 8px;
+		height: 8px;
+		border-radius: 50%;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		background: $red;
+		transition: .5s;
+		opacity: 0;
+	}
+}
+
+.form__checkbox {
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+}
+
+.form__checkbox--input {
+	display: none;
+
+	&:checked + .form__checkbox--check::before{
+		opacity: 1;
+	}
+}
+
+.form__checkbox--check {
+	@extend .form__radio--check;
+	border-radius: 0;
+
+	&::before {
+		height: 10px;
+		width: 10px;
+		background: transparent url('../img/content/form/checkbtn.png') center center / cover no-repeat;
+	}
+}
+
+
+
+.form__btn--clear {
+	font-weight: light;
+	font-size: 14px;
+	margin-left: 20px;
+	transition: .5s;
+
+	&:hover {
+		color: $red;
 	}
 }
