--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,5 +1,5 @@
 .hero { 
-	background: $black url('../img/bg/herobgtmp.jpg') center center / cover no-repeat;
+	background: url('../img/bg/texture-video.png') center center / cover no-repeat;
 	position: relative;
 }
 
