--- a/css/blocks/best.scss
+++ b/css/blocks/best.scss
@@ -4,12 +4,12 @@
 
 .best__list {
 	display: flex;
-	margin-top: 56px;
+	margin-top: rem(56px);
 }
 
 .best__item {
 	flex: 1;
-	margin-right: 35px;
+	margin-right: rem(35px);
 	text-align: center;
 	
 	&:last-child {
@@ -18,17 +18,17 @@
 }
 
 .best__picture {
-	margin-bottom: 34px;
+	margin-bottom: rem(34px);
 }
 
 .best__desc-title {
-	font-size: 24px;
+	font-size: rem(24px);
 	font-family: $lifehack;
-	margin-bottom: 23px;
+	margin-bottom: rem(23px);
 }
 
 .best__desc-text {
 	font-weight: light;
-	font-size: 14px;
+	font-size: rem(14px);
 	opacity: .8;
 }
