--- a/css/blocks/arrow-scroll-btn.scss
+++ b/css/blocks/arrow-scroll-btn.scss
@@ -1,11 +1,11 @@
 .arrow-scroll-btn {
 	position: absolute;
-	bottom: 40px;
+	bottom: rem(40px);
 	left: 50%;
 	transform: translateX(-50%);
 	transition: .3s;
 
 	&:hover {
-		bottom: 36px;
+		bottom: rem(36px);
 	}
 }
