--- a/css/blocks/fixed-menu.scss
+++ b/css/blocks/fixed-menu.scss
@@ -1,7 +1,7 @@
 .fixed-menu {
 	position: fixed;
-	top: 95px;
-	right: 53px;
+	top: rem(95px);
+	right: rem(53px);
 	z-index: $z-fixed-menu;
 }
 
@@ -10,17 +10,17 @@
 
 	&--active {
 		.fixed-menu__dot {
-			border: 1px solid #fff;
+			border: rem(1px) solid #fff;
 		}
 	}
 }
 
 .fixed-menu__dot {
-	height: 16px;
-	width: 16px;
+	height: rem(16px);
+	width: rem(16px);
 	border-radius: 50%;
-	border: 1px solid transparent;
-	margin-bottom: 3px;
+	border: rem(1px) solid transparent;
+	margin-bottom: rem(3px);
 	position: relative;
 	transition: 0.2s;
 
@@ -30,8 +30,8 @@
 
 	&::before {
 		content: "";
-		width: 6px;
-		height: 6px;
+		width: rem(6px);
+		height: rem(6px);
 		border-radius: 50%;
 		background: #fff;
 		position: absolute;
