--- a/css/blocks/footer.scss
+++ b/css/blocks/footer.scss
@@ -1,10 +1,10 @@
 .footer {
-	background: url('./../../img/bg/footer-bg.jpg') center center / cover no-repeat;
+	background: url('./../img/bg/footer-bg.jpg') center center / cover no-repeat;
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	max-height: 65px;
+	max-height: rem(65px);
 	height: 100%;
 
 	.container {
