--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -1,12 +1,12 @@
 
 .form__elem {
 	display: flex;
-	padding-top: 40px;
+	padding-top: rem(40px);
 }
 
 .form__column {
 	flex: 1;
-	margin-right: 20px;
+	margin-right: rem(20px);
 
 	&:last-child{
 		margin-right: 0;
@@ -15,12 +15,12 @@
 
 .form__row{ 
 	display: flex;
-	margin-bottom: 20px;
+	margin-bottom: rem(20px);
 }
 
 .form__block {
 	flex: 1;
-	margin-right: 20px;
+	margin-right: rem(20px);
 	display: block;
 
 	&:last-child {
@@ -30,29 +30,29 @@
 
 .form__block-title {
 	font-weight: light;
-	font-size: 14px;
-	margin-left: 10px;
+	font-size: rem(14px);
+	margin-left: rem(10px);
 }
 
 .form__input {
 	background: #fff;
-	border-radius: 3px;
+	border-radius: rem(3px);
 	border: none;
-	padding: 10px 21px;
-	margin-top: 5px;
+	padding: rem(10px) rem(21px);
+	margin-top: rem(5px);
 	width: 100%;
 	outline-color: #f9b43b;
 
 	&--textarea {
 		resize: none;
-		height: 124px;
+		height: rem(124px);
 	}
 }
 
 .form__radio {
 	display: flex;
 	align-items: center;
-	margin-right: 20px;
+	margin-right: rem(20px);
 	cursor: pointer;
 
 	&:last-child {
@@ -70,8 +70,8 @@
 
 .form__radio--check {
 	display: block;
-	width: 16px;
-	height: 16px;
+	width: rem(16px);
+	height: rem(16px);
 	border-radius: 50%;
 	background: #fff;
 	position: relative;
@@ -80,8 +80,8 @@
 		content: "";
 		position: absolute;
 		display: block;
-		width: 8px;
-		height: 8px;
+		width: rem(8px);
+		height: rem(8px);
 		border-radius: 50%;
 		top: 50%;
 		left: 50%;
@@ -111,8 +111,8 @@
 	border-radius: 0;
 
 	&::before {
-		height: 10px;
-		width: 10px;
+		height: rem(10px);
+		width: rem(10px);
 		background: transparent url('../img/content/form/checkbtn.png') center center / cover no-repeat;
 	}
 }
@@ -121,8 +121,8 @@
 
 .form__btn--clear {
 	font-weight: light;
-	font-size: 14px;
-	margin-left: 20px;
+	font-size: rem(14px);
+	margin-left: rem(20px);
 	transition: .5s;
 
 	&:hover {
