--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@ button:-moz-focusring,
 [type=button]:-moz-focusring,
 [type=reset]:-moz-focusring,
 [type=submit]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+  outline: 0.0625rem dotted ButtonText;
 }
 
 /**
@@ -287,7 +287,7 @@ textarea {
 [type=search] {
   -webkit-appearance: textfield;
   /* 1 */
-  outline-offset: -2px;
+  outline-offset: -0.125rem;
   /* 2 */
 }
 
@@ -393,7 +393,7 @@ html, body {
 }
 
 body {
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.42;
   position: relative;
   font-family: "Ubuntu", Arial, sans-serif;
@@ -406,13 +406,13 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: 960px;
   min-height: 100%;
   overflow: hidden;
 }
 
 .container {
-  max-width: 940px;
+  width: 98%;
+  max-width: 58.75rem;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -421,6 +421,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -548,7 +549,7 @@ button {
 
 .section {
   height: 100vh;
-  min-height: 650px;
+  min-height: 40.625rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -568,7 +569,7 @@ button {
 
 .title {
   font-family: "Gagalin";
-  font-size: 72px;
+  font-size: 4.5rem;
   line-height: 1;
 }
 .title--color--yellow {
@@ -612,16 +613,16 @@ button {
 }
 
 .hero__desc {
-  padding-top: 80px;
-  margin-left: 50px;
+  padding-top: 5rem;
+  margin-left: 3.125rem;
 }
 
 .hero__title {
-  margin-bottom: 55px;
+  margin-bottom: 3.4375rem;
 }
 
 .hero__subtitle {
-  font-size: 56px;
+  font-size: 3.5rem;
   font-family: "Lifehack";
   color: #fff;
   line-height: 1;
@@ -637,7 +638,7 @@ button {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 12px;
+  padding-top: 0.75rem;
 }
 
 .header__buttons {
@@ -650,7 +651,7 @@ button {
 }
 
 .nav {
-  margin-right: 15px;
+  margin-right: 0.9375rem;
 }
 
 .nav__list {
@@ -672,15 +673,15 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 14px;
+  margin-right: 0.875rem;
 }
 .nav__item::after {
   content: "";
-  width: 4px;
-  height: 3px;
+  width: 0.25rem;
+  height: 0.1875rem;
   background: #fff;
   border-radius: 50%;
-  margin-left: 14px;
+  margin-left: 0.875rem;
 }
 .nav__item:last-child::after {
   display: none;
@@ -694,18 +695,18 @@ button {
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 0.8125rem;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 .btn {
-  padding: 10px 16px;
-  border-radius: 5px;
+  padding: 0.625rem 1rem;
+  border-radius: 0.3125rem;
   background: #e35028;
   text-transform: uppercase;
   color: #fff;
-  font-size: 13px;
+  font-size: 0.8125rem;
   position: relative;
   overflow: hidden;
   -webkit-transition: 0.7s;
@@ -713,7 +714,7 @@ button {
 }
 .btn::before {
   content: "";
-  width: 10px;
+  width: 0.625rem;
   height: 100%;
   position: absolute;
   top: 0;
@@ -741,7 +742,7 @@ button {
 
 .arrow-scroll-btn {
   position: absolute;
-  bottom: 40px;
+  bottom: 2.5rem;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -749,7 +750,7 @@ button {
   transition: 0.3s;
 }
 .arrow-scroll-btn:hover {
-  bottom: 36px;
+  bottom: 2.25rem;
 }
 
 .best {
@@ -760,14 +761,14 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 56px;
+  margin-top: 3.5rem;
 }
 
 .best__item {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 35px;
+  margin-right: 2.1875rem;
   text-align: center;
 }
 .best__item:last-child {
@@ -775,18 +776,18 @@ button {
 }
 
 .best__picture {
-  margin-bottom: 34px;
+  margin-bottom: 2.125rem;
 }
 
 .best__desc-title {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-family: "Lifehack";
-  margin-bottom: 23px;
+  margin-bottom: 1.4375rem;
 }
 
 .best__desc-text {
   font-weight: light;
-  font-size: 14px;
+  font-size: 0.875rem;
   opacity: 0.8;
 }
 
@@ -825,7 +826,7 @@ button {
   bottom: 0;
   background: rgba(47, 50, 52, 0.5);
   color: #fff;
-  padding: 50px 50px 25px;
+  padding: 3.125rem 3.125rem 1.5625rem;
   opacity: 0;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -834,14 +835,14 @@ button {
 
 .reviews__title {
   font-family: "Gagalin";
-  font-size: 14px;
-  margin-bottom: 20px;
+  font-size: 0.875rem;
+  margin-bottom: 1.25rem;
 }
 
 .reviews__text {
   font-weight: light;
-  font-size: 14px;
-  margin-bottom: 20px;
+  font-size: 0.875rem;
+  margin-bottom: 1.25rem;
 }
 
 .order {
@@ -853,14 +854,14 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 40px;
+  padding-top: 2.5rem;
 }
 
 .form__column {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 20px;
+  margin-right: 1.25rem;
 }
 .form__column:last-child {
   margin-right: 0;
@@ -870,14 +871,14 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .form__block {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 20px;
+  margin-right: 1.25rem;
   display: block;
 }
 .form__block:last-child {
@@ -886,22 +887,22 @@ button {
 
 .form__block-title {
   font-weight: light;
-  font-size: 14px;
-  margin-left: 10px;
+  font-size: 0.875rem;
+  margin-left: 0.625rem;
 }
 
 .form__input {
   background: #fff;
-  border-radius: 3px;
+  border-radius: 0.1875rem;
   border: none;
-  padding: 10px 21px;
-  margin-top: 5px;
+  padding: 0.625rem 1.3125rem;
+  margin-top: 0.3125rem;
   width: 100%;
   outline-color: #f9b43b;
 }
 .form__input--textarea {
   resize: none;
-  height: 124px;
+  height: 7.75rem;
 }
 
 .form__radio {
@@ -911,7 +912,7 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 20px;
+  margin-right: 1.25rem;
   cursor: pointer;
 }
 .form__radio:last-child {
@@ -927,8 +928,8 @@ button {
 
 .form__radio--check, .form__checkbox--check {
   display: block;
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
   background: #fff;
   position: relative;
@@ -937,8 +938,8 @@ button {
   content: "";
   position: absolute;
   display: block;
-  width: 8px;
-  height: 8px;
+  width: 0.5rem;
+  height: 0.5rem;
   border-radius: 50%;
   top: 50%;
   left: 50%;
@@ -971,15 +972,15 @@ button {
   border-radius: 0;
 }
 .form__checkbox--check::before {
-  height: 10px;
-  width: 10px;
+  height: 0.625rem;
+  width: 0.625rem;
   background: transparent url("../img/content/form/checkbtn.png") center center/cover no-repeat;
 }
 
 .form__btn--clear {
   font-weight: light;
-  font-size: 14px;
-  margin-left: 20px;
+  font-size: 0.875rem;
+  margin-left: 1.25rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -989,21 +990,21 @@ button {
 
 .fixed-menu {
   position: fixed;
-  top: 95px;
-  right: 53px;
+  top: 5.9375rem;
+  right: 3.3125rem;
   z-index: 100;
 }
 
 .fixed-menu__item--active .fixed-menu__dot {
-  border: 1px solid #fff;
+  border: 0.0625rem solid #fff;
 }
 
 .fixed-menu__dot {
-  height: 16px;
-  width: 16px;
+  height: 1rem;
+  width: 1rem;
   border-radius: 50%;
-  border: 1px solid transparent;
-  margin-bottom: 3px;
+  border: 0.0625rem solid transparent;
+  margin-bottom: 0.1875rem;
   position: relative;
   -webkit-transition: 0.2s;
   transition: 0.2s;
@@ -1013,8 +1014,8 @@ button {
 }
 .fixed-menu__dot::before {
   content: "";
-  width: 6px;
-  height: 6px;
+  width: 0.375rem;
+  height: 0.375rem;
   border-radius: 50%;
   background: #fff;
   position: absolute;
@@ -1025,55 +1026,55 @@ button {
 }
 
 .logo {
-  width: 98.265px;
-  height: 74.317px;
+  width: 6.1415625rem;
+  height: 4.6448125rem;
 }
 
 .arrow-scroll {
-  width: 28.685px;
-  height: 14.479px;
+  width: 1.7928125rem;
+  height: 0.9049375rem;
 }
 
 .meat {
-  width: 96.428px;
-  height: 89.246px;
+  width: 6.02675rem;
+  height: 5.577875rem;
 }
 
 .hand {
-  width: 73px;
-  height: 85.875px;
+  width: 4.5625rem;
+  height: 5.3671875rem;
 }
 
 .natural {
-  width: 88px;
-  height: 75.534px;
+  width: 5.5rem;
+  height: 4.720875rem;
 }
 
 .phone-icon {
-  width: 11px;
-  height: 11px;
-  margin-right: 5px;
+  width: 0.6875rem;
+  height: 0.6875rem;
+  margin-right: 0.3125rem;
   fill: #E45028;
 }
 
 .vk {
-  width: 23px;
-  height: 13px;
+  width: 1.4375rem;
+  height: 0.8125rem;
 }
 
 .fb {
-  width: 20px;
-  height: 20px;
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .inst {
-  width: 20px;
-  height: 20px;
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .twitter {
-  width: 20px;
-  height: 16px;
+  width: 1.25rem;
+  height: 1rem;
 }
 
 .drops {
@@ -1082,8 +1083,8 @@ button {
   top: 40%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 450.527px;
-  height: 241.369px;
+  width: 28.1579375rem;
+  height: 15.0855625rem;
   -webkit-animation: drop-color 4s infinite;
           animation: drop-color 4s infinite;
 }
@@ -1094,12 +1095,12 @@ button {
 }
 
 .footer {
-  background: url("./../../img/bg/footer-bg.jpg") center center/cover no-repeat;
+  background: url("./../img/bg/footer-bg.jpg") center center/cover no-repeat;
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  max-height: 65px;
+  max-height: 4.0625rem;
   height: 100%;
 }
 .footer .container {
@@ -1131,14 +1132,14 @@ button {
 
 .adress {
   font-weight: light;
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff;
 }
 
 .phone {
   color: #e45028;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 0.875rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -1159,7 +1160,7 @@ button {
 }
 
 .socials__item {
-  margin-right: 20px;
+  margin-right: 1.25rem;
   opacity: 0.3;
   -webkit-transition: 0.5s;
   transition: 0.5s;
