--- a/css/_misc/_layout.scss
+++ b/css/_misc/_layout.scss
@@ -2,6 +2,19 @@
     box-sizing: border-box;
 }
 
+html {
+	font-size: 16px;
+
+	
+	@include laptop {
+		font-size: 15px;
+	}
+	
+	@include phones {
+		font-size: 14px;
+	}
+}
+
 html,body {
     height: 100%;
 }
