--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,7 @@ $hover-black: #1f2122;
 
 //z-index
 
+$z-index-10: 10; // - logo, hamburger-open-close-btn
 $z-fixed-menu: 100;
 $z-index-video-bg: -10;
 
@@ -59,3 +60,5 @@ $z-index-video-bg: -10;
 @import "blocks/adress.scss";
 @import "blocks/phone.scss";
 @import "blocks/socials.scss";
+@import "blocks/menu.scss";
+@import "blocks/hamburger-menu.scss";
